// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/modal/ScoreEditor.vue > { locale: "en" } snapshot test > { songId: "06loOQ0DQb0DqbOibl6qO81qlIdoP9DI", isCourse: false } renders label.selectChart 1`] = `
<div
  class="modal-card"
>
  <header
    class="modal-card-head"
  >
    <h1
      class="modal-card-title"
    >
      PARANOiA
    </h1>
  </header>
  <section
    class="modal-card-body"
  >
    <!-- Select chart -->
    <div
      class="field"
    >
      
      <label
        class="label"
      >
        
        Select Chart
        
      </label>
      
      
      <div
        class="control select"
      >
        <select
          class="is-empty"
        >
          <!--v-if-->
          
          
          <option
            value="[object Object]"
          >
            SP-BEGINNER (4)
          </option>
          <option
            value="[object Object]"
          >
            SP-BASIC (8)
          </option>
          
          
        </select>
        <!--v-if-->
        <!--v-if-->
      </div>
      
      <!--v-if-->
    </div>
    <!-- Input score -->
    <!--v-if-->
  </section>
  <!--v-if-->
</div>
`;

exports[`components/modal/ScoreEditor.vue > { locale: "en" } snapshot test > { songId: "06loOQ0DQb0DqbOibl6qO81qlIdoP9DI", isCourse: false, playstyle: 1, difficulty: 0 } renders score input form 1`] = `
<div
  class="modal-card"
>
  <header
    class="modal-card-head"
  >
    <h1
      class="modal-card-title"
    >
      PARANOiA
    </h1>
  </header>
  <section
    class="modal-card-body"
  >
    <!-- Select chart -->
    <h2
      class="subtitle is-small"
    >
      SP-BEGINNER (4)
    </h2>
    <!-- Input score -->
    
    <transition-stub
      appear="false"
      css="true"
      name="fade"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
    <div
      class="field"
    >
      
      <!--v-if-->
      
      <div
        class="control"
      >
        <div
          class="field is-grouped"
        >
          
          <div
            class="field"
          >
            
            <label
              class="label"
            >
              
              Score
              
            </label>
            
            
            <div
              class="control"
            >
              <input
                autocomplete="off"
                class="input"
                max="1000000"
                min="0"
                modelmodifiers="[object Object]"
                placeholder="0-1000000"
                required=""
                step="10"
                type="number"
              />
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
            
            <!--v-if-->
          </div>
          <label
            class="b-checkbox checkbox"
          >
            <input
              class="check"
              false-value="false"
              true-value="true"
              type="checkbox"
              value="false"
            />
            <span
              class="control-label"
            >
              
              Rank E
              
            </span>
          </label>
          
        </div>
      </div>
      <!--v-if-->
    </div>
    <div
      class="field"
    >
      
      <label
        class="label"
      >
        
        Clear Lamp
        
      </label>
      
      
      <div
        class="control select"
      >
        <select
          class=""
          modelmodifiers="[object Object]"
        >
          
          <!--v-if-->
          
          
          
          <option
            value="0"
          >
            Failed
          </option>
          <option
            value="1"
          >
            Assisted Clear
          </option>
          <option
            value="2"
          >
            Clear
          </option>
          <option
            value="3"
          >
            Life 4
          </option>
          <option
            value="4"
          >
            Full Combo
          </option>
          <option
            value="5"
          >
            Great Full Combo
          </option>
          <option
            value="6"
          >
            Perfect Full Combo
          </option>
          <option
            value="7"
          >
            Marvelous Full Combo
          </option>
          
          
        </select>
        <!--v-if-->
        <!--v-if-->
      </div>
      
      <!--v-if-->
    </div>
    <div
      class="field"
    >
      
      <label
        class="label"
      >
        
        EX SCORE
        
      </label>
      
      
      <div
        class="control"
      >
        <input
          autocomplete="off"
          class="input"
          max="414"
          min="0"
          modelmodifiers="[object Object]"
          placeholder="0-414"
          type="number"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      <!--v-if-->
    </div>
    <div
      class="field"
    >
      
      <label
        class="label"
      >
        
        MAX COMBO
        
      </label>
      
      
      <div
        class="control"
      >
        <input
          autocomplete="off"
          class="input"
          max="138"
          min="0"
          modelmodifiers="[object Object]"
          placeholder="0-138"
          type="number"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      <!--v-if-->
    </div>
    <div
      class="field"
    >
      
      <!--v-if-->
      
      
      <button
        class="button is-info"
        type="button"
      >
        <span
          class="button-wrapper"
        >
          <span
            class="icon"
          >
            <i
              class="mdi mdi-calculator mdi-24px"
            />
          </span>
          <span
            class=""
          >
            
            Auto Calc
            
          </span>
          <!--v-if-->
        </span>
      </button>
      
      <!--v-if-->
    </div>
    
  </section>
  <footer
    class="modal-card-foot"
  >
    <button
      class="button is-success"
      type="button"
    >
      <span
        class="button-wrapper"
      >
        <span
          class="icon"
        >
          <i
            class="mdi mdi-content-save mdi-24px"
          />
        </span>
        <span
          class=""
        >
          
          Save
          
        </span>
        <!--v-if-->
      </span>
    </button>
    <button
      class="button is-danger"
      type="button"
    >
      <span
        class="button-wrapper"
      >
        <span
          class="icon"
        >
          <i
            class="mdi mdi-delete mdi-24px"
          />
        </span>
        <span
          class=""
        >
          
          Delete
          
        </span>
        <!--v-if-->
      </span>
    </button>
    <button
      class="button is-warning"
      type="button"
    >
      <span
        class="button-wrapper"
      >
        <!--v-if-->
        <span
          class=""
        >
          
          Close
          
        </span>
        <!--v-if-->
      </span>
    </button>
  </footer>
</div>
`;

exports[`components/modal/ScoreEditor.vue > { locale: "ja" } snapshot test > { songId: "06loOQ0DQb0DqbOibl6qO81qlIdoP9DI", isCourse: false } renders label.selectChart 1`] = `
<div
  class="modal-card"
>
  <header
    class="modal-card-head"
  >
    <h1
      class="modal-card-title"
    >
      PARANOiA
    </h1>
  </header>
  <section
    class="modal-card-body"
  >
    <!-- Select chart -->
    <div
      class="field"
    >
      
      <label
        class="label"
      >
        
        譜面を選択
        
      </label>
      
      
      <div
        class="control select"
      >
        <select
          class="is-empty"
        >
          <!--v-if-->
          
          
          <option
            value="[object Object]"
          >
            SP-BEGINNER (4)
          </option>
          <option
            value="[object Object]"
          >
            SP-BASIC (8)
          </option>
          
          
        </select>
        <!--v-if-->
        <!--v-if-->
      </div>
      
      <!--v-if-->
    </div>
    <!-- Input score -->
    <!--v-if-->
  </section>
  <!--v-if-->
</div>
`;

exports[`components/modal/ScoreEditor.vue > { locale: "ja" } snapshot test > { songId: "06loOQ0DQb0DqbOibl6qO81qlIdoP9DI", isCourse: false, playstyle: 1, difficulty: 0 } renders score input form 1`] = `
<div
  class="modal-card"
>
  <header
    class="modal-card-head"
  >
    <h1
      class="modal-card-title"
    >
      PARANOiA
    </h1>
  </header>
  <section
    class="modal-card-body"
  >
    <!-- Select chart -->
    <h2
      class="subtitle is-small"
    >
      SP-BEGINNER (4)
    </h2>
    <!-- Input score -->
    
    <transition-stub
      appear="false"
      css="true"
      name="fade"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
    <div
      class="field"
    >
      
      <!--v-if-->
      
      <div
        class="control"
      >
        <div
          class="field is-grouped"
        >
          
          <div
            class="field"
          >
            
            <label
              class="label"
            >
              
              ハイスコア
              
            </label>
            
            
            <div
              class="control"
            >
              <input
                autocomplete="off"
                class="input"
                max="1000000"
                min="0"
                modelmodifiers="[object Object]"
                placeholder="0-1000000"
                required=""
                step="10"
                type="number"
              />
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
            
            <!--v-if-->
          </div>
          <label
            class="b-checkbox checkbox"
          >
            <input
              class="check"
              false-value="false"
              true-value="true"
              type="checkbox"
              value="false"
            />
            <span
              class="control-label"
            >
              
              E判定
              
            </span>
          </label>
          
        </div>
      </div>
      <!--v-if-->
    </div>
    <div
      class="field"
    >
      
      <label
        class="label"
      >
        
        クリア種別
        
      </label>
      
      
      <div
        class="control select"
      >
        <select
          class=""
          modelmodifiers="[object Object]"
        >
          
          <!--v-if-->
          
          
          
          <option
            value="0"
          >
            Failed
          </option>
          <option
            value="1"
          >
            Assisted Clear
          </option>
          <option
            value="2"
          >
            Clear
          </option>
          <option
            value="3"
          >
            Life 4
          </option>
          <option
            value="4"
          >
            Full Combo
          </option>
          <option
            value="5"
          >
            Great Full Combo
          </option>
          <option
            value="6"
          >
            Perfect Full Combo
          </option>
          <option
            value="7"
          >
            Marvelous Full Combo
          </option>
          
          
        </select>
        <!--v-if-->
        <!--v-if-->
      </div>
      
      <!--v-if-->
    </div>
    <div
      class="field"
    >
      
      <label
        class="label"
      >
        
        EXスコア
        
      </label>
      
      
      <div
        class="control"
      >
        <input
          autocomplete="off"
          class="input"
          max="414"
          min="0"
          modelmodifiers="[object Object]"
          placeholder="0-414"
          type="number"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      <!--v-if-->
    </div>
    <div
      class="field"
    >
      
      <label
        class="label"
      >
        
        最大コンボ数
        
      </label>
      
      
      <div
        class="control"
      >
        <input
          autocomplete="off"
          class="input"
          max="138"
          min="0"
          modelmodifiers="[object Object]"
          placeholder="0-138"
          type="number"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      
      <!--v-if-->
    </div>
    <div
      class="field"
    >
      
      <!--v-if-->
      
      
      <button
        class="button is-info"
        type="button"
      >
        <span
          class="button-wrapper"
        >
          <span
            class="icon"
          >
            <i
              class="mdi mdi-calculator mdi-24px"
            />
          </span>
          <span
            class=""
          >
            
            自動計算
            
          </span>
          <!--v-if-->
        </span>
      </button>
      
      <!--v-if-->
    </div>
    
  </section>
  <footer
    class="modal-card-foot"
  >
    <button
      class="button is-success"
      type="button"
    >
      <span
        class="button-wrapper"
      >
        <span
          class="icon"
        >
          <i
            class="mdi mdi-content-save mdi-24px"
          />
        </span>
        <span
          class=""
        >
          
          保存
          
        </span>
        <!--v-if-->
      </span>
    </button>
    <button
      class="button is-danger"
      type="button"
    >
      <span
        class="button-wrapper"
      >
        <span
          class="icon"
        >
          <i
            class="mdi mdi-delete mdi-24px"
          />
        </span>
        <span
          class=""
        >
          
          削除
          
        </span>
        <!--v-if-->
      </span>
    </button>
    <button
      class="button is-warning"
      type="button"
    >
      <span
        class="button-wrapper"
      >
        <!--v-if-->
        <span
          class=""
        >
          
          閉じる
          
        </span>
        <!--v-if-->
      </span>
    </button>
  </footer>
</div>
`;
